@@ -2,19 +2,16 @@ package com.epam.training.dao;
 
 import com.epam.training.model.Trainee;
 import com.epam.training.storage.InMemoryStorage;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Repository;
 
-import java.util.Collection;
-import java.util.stream.Collectors;
+import java.util.List;
 
 @Repository
 public class TraineeDao {
 
-    private InMemoryStorage storage;
+    private final InMemoryStorage storage;
 
-    @Autowired
-    public void setStorage(InMemoryStorage storage) {
+    public TraineeDao(InMemoryStorage storage) {
         this.storage = storage;
     }
 
@@ -22,7 +19,7 @@ public class TraineeDao {
         storage.getNamespace("trainees").put(id, trainee);
     }
 
-    public Trainee findById(Long id) {
+    public Trainee getById(Long id) {
         return (Trainee) storage.getNamespace("trainees").get(id);
     }
 
@@ -30,11 +27,11 @@ public class TraineeDao {
         storage.getNamespace("trainees").remove(id);
     }
 
-    public Collection<Trainee> findAll() {
+    public List<Trainee> findAll() {
         return storage.getNamespace("trainees")
                 .values()
                 .stream()
                 .map(t -> (Trainee) t)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
